<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_history_for_coin">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deep_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_photo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_name"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_choice" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/flip_result" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        />




</LinearLayout>