<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baby_yoda4"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/deep_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/yellow2"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_child" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="136dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_childManager"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/btn_background"
            android:drawableStart="@drawable/ic_edit"
            android:paddingStart="6dp"
            android:paddingEnd="10dp"
            android:text="@string/children"
            android:textAllCaps="false"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_flipCoin"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/btn_background"
            android:drawableStart="@drawable/ic_coin"
            android:paddingStart="6dp"
            android:paddingEnd="20sp"
            android:text="@string/flip_a_coin"
            android:textAllCaps="false"
            android:textColor="@color/yellow"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_timer"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_below="@id/btn_childManager"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:drawableStart="@drawable/ic_timer"
            android:paddingStart="6dp"
            android:paddingEnd="20sp"
            android:text="@string/timer"
            android:textAllCaps="false"
            android:textColor="@color/yellow"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_whose_turn"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btn_flipCoin"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/btn_background"
            android:drawableStart="@drawable/ic_whoseturn"
            android:paddingStart="6dp"
            android:paddingEnd="20sp"
            android:text="@string/tasks"
            android:textAllCaps="false"
            android:textColor="@color/yellow"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/btn_background"
            android:drawableStart="@drawable/ic_help"
            android:paddingStart="6dp"
            android:paddingEnd="20sp"
            android:text="Help "
            android:textAllCaps="false"
            android:textColor="@color/yellow"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_take_breath"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_below="@id/btn_timer"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:drawableStart="@drawable/ic_take_breath"
            android:paddingStart="6dp"
            android:paddingEnd="20sp"
            android:text="@string/btn_take_breath"
            android:textAllCaps="false"
            android:textColor="@color/yellow"
            android:textStyle="italic" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>